fix(*): make push nav visible

--- a/css/style.css
+++ b/css/style.css
@@ -923,7 +923,6 @@ header .btn-donate {
   */
 @media only screen and (max-width: 60em) {
   .site-wrapper {
-    position: relative;
     overflow: hidden;
     width: 100%;
     z-index: 100;
@@ -967,6 +966,204 @@ header .btn-donate {
 body.noscript .navigation {
   position: static;
   right: auto;
+}
+
+h2 {
+  font-size: 36px;
+  font-weight: 700;
+  text-rendering: optimizeLegibility;
+  letter-spacing: .5px;
+}
+
+body, input, textarea {
+  font-weight: 200;
+  font-family: sans-serif;
+  line-height: 1.54;
+  font-size: 16px;
+  background: #608a3c;
+  -webkit-font-smoothing: subpixel-antialiased;
+}
+
+.sidebar-1 {
+  /* these are the styles for the container around the menu */
+  text-align: left;
+  padding: 0px;
+  display: inline-block;
+  box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.2);
+}
+
+.sidebar-menu {
+  /*this style impacts the look of the heading containers. */
+  cursor: pointer;
+  text-transform: uppercase;
+  padding: 10px;
+  background: #80a143;
+  position: relative;
+  color: #FFFFFF;
+  border-bottom: 1px solid #dedede;
+  font-size: 1.5em;
+  font-weight: 300;
+  text-rendering: optimizeLegibility;
+  letter-spacing: .5px;
+  padding-right: 50px;
+}
+
+.sidebar-menu:first-child {
+  border-top: 1px solid #dedede;
+}
+
+.sidebar-menu:before, .sidebar-menu:after {
+  content: "";
+  width: 3px;
+  height: 25px;
+  background: #FFFFFF;
+  border-radius: 3px;
+  position: absolute;
+  right: 22px;
+  top: calc(28.7px - 12.5px);
+  transition: all .2s ease;
+}
+
+.sidebar-menu:after {
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.open:before {
+  -webkit-animation: turn-plus;
+          animation: turn-plus;
+  -webkit-animation-duration: .3s;
+          animation-duration: .3s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.open:after {
+  -webkit-animation: turn-crossbar;
+          animation: turn-crossbar;
+  -webkit-animation-duration: .3s;
+          animation-duration: .3s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes turn-plus {
+  0% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+}
+
+@keyframes turn-plus {
+  0% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+}
+
+@-webkit-keyframes turn-crossbar {
+  0% {
+    -webkit-transform: none;
+            transform: none;
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+  50% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+}
+
+@keyframes turn-crossbar {
+  0% {
+    -webkit-transform: none;
+            transform: none;
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+  50% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+}
+
+.sidebar-menu:hover {
+  background: #547834;
+}
+
+.sub-menu {
+  /*this style is for the sub-menu box*/
+  color: #FFFFFF;
+  font-size: 1em;
+  display: none;
+}
+
+.sub-menu:last-child {
+  border-bottom: 0;
+}
+
+.sub-menu li:hover {
+  background: #4a6830;
+  cursor: pointer;
+}
+
+.sub-menu li {
+  /*this styles individual elements in a sub-menu*/
+  padding: 10px;
+  background: #608a3c;
+}
+
+.sub-menu li:last-child {
+  border-bottom: 0;
+}
+
+.sub-menu ul {
+  /*this just 0s out a bunch of stuff so that it plays nice with the list stylings*/
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+@media (max-width: 540px) {
+  .sidebar-menu {
+    font-size: 1em;
+    font-weight: 400;
+  }
+  .sub-menu {
+    font-weight: 400;
+  }
+  .sidebar-1 {
+    margin: 0;
+    width: 100%;
+  }
+  .sidebar-menu:after, .sidebar-menu:before {
+    top: calc(23.5px - 12.5px);
+  }
 }
 
 @-moz-viewport {
